auth&auth completed

--- a/src/app/admin/productlist/productlist.component.html
+++ b/src/app/admin/productlist/productlist.component.html
@@ -23,7 +23,7 @@
                     <img src={{product.productimage}} width="150px" height="200px" alt="" class="d-block mx-auto image">
                 </td>
 
-                <td><button type="submit" class="btn btn-primary">Edit</button></td>
+                <td><button type="submit" class="btn btn-primary" (click)="updatemethod()">Edit</button></td>
                 <td><button type="submit" class="btn btn-danger">Remove</button></td>
             </tr>
 
