--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,6 @@
 
 <app-carousel></app-carousel> 
+<app-hdfc></app-hdfc>
+<app-oils-ghees></app-oils-ghees>
 <app-homecards></app-homecards>
 <app-footer></app-footer>
