--- a/src/app/navbar1/navbar1.component.html
+++ b/src/app/navbar1/navbar1.component.html
@@ -1,10 +1,10 @@
- <div class="navbar1" > 
+ <!-- <div class="navbar1 sticky-top" >  -->
    <!-- background:linear-gradient(to right, red , yellow) -->
     <nav class="navbar navbar-expand-lg  navbar-inverse navbar-light" role="navigation"  style="background: linear-gradient(to bottom, #ff66ff 0%, #ff99cc 100%);font-family: 'Amita', cursive;color:white;"> 
       <div class="container-fluid" >
         <!-- #5DA2D5 -->
         <!-- <svg height="512" viewBox="0 0 128 128" width="512" xmlns="http://www.w3.org/2000/svg" id="fi_4017946"><g id="Circle_Grid" data-name="Circle Grid"><circle cx="64" cy="64" fill="#ef5261" r="64"></circle></g><g id="icon"><circle cx="53.659" cy="53.653" fill="#69b0ee" r="28.604"></circle><path d="m82.263 74.395-7.869 7.869-6.705-3.538 11.036-11.036z" fill="#575b6d"></path><path d="m31.986 31.973a30.654 30.654 0 1 0 43.352.013 30.654 30.654 0 0 0 -43.352-.013zm40.578 40.578a26.731 26.731 0 1 1 0-37.79 26.742 26.742 0 0 1 0 37.79z" fill="#575b6d"></path><path d="m72.217 82.9 19.894 19.894a7.55 7.55 0 1 0 10.677-10.677l-19.894-19.899z" fill="#f6b863"></path><path d="m83.12 71.316-11.8 11.8a1.9 1.9 0 0 0 2.68 2.684l11.8-11.8a1.9 1.9 0 0 0 -2.681-2.681z" fill="#eaa14e"></path><path d="m51.837 67.279a2.657 2.657 0 1 1 -2.653-2.66 2.649 2.649 0 0 1 2.653 2.66z" fill="#414451"></path><path d="m49.183 68.478a1.2 1.2 0 1 1 1.2-1.2 1.2 1.2 0 0 1 -1.2 1.2z" fill="#dbd8dd"></path><path d="m63.062 67.279a2.657 2.657 0 1 1 -2.654-2.66 2.65 2.65 0 0 1 2.654 2.66z" fill="#414451"></path><path d="m60.408 68.478a1.2 1.2 0 1 1 1.2-1.2 1.2 1.2 0 0 1 -1.2 1.2z" fill="#dbd8dd"></path><path d="m70.185 47.415-2.775 9.159a1.317 1.317 0 0 1 -1.11.926l-19.584 2.758-2.961-15.558 25.845 1.867a.659.659 0 0 1 .585.848z" fill="#f6c863"></path><path d="m65.761 63.77h-20.318a2.2 2.2 0 1 1 0-4.4h.3l-2.929-17.083h-3.314a.659.659 0 0 1 0-1.317h3.869a.658.658 0 0 1 .649.547l3.152 18.4a.657.657 0 0 1 -.649.769h-1.078a.884.884 0 1 0 0 1.767h20.318a.659.659 0 0 1 0 1.317z" fill="#eeefee"></path><path d="m41.531 40.693v1.812a.1.1 0 0 1 -.095.095h-3.336a1 1 0 0 1 -1-1 1 1 0 0 1 1-1h3.336a.1.1 0 0 1 .095.093z" fill="#575b6d"></path><g fill="#eab54e"><path d="m62.288 55.863a.4.4 0 0 1 -.075-.007.425.425 0 0 1 -.343-.493l1.2-6.722a.425.425 0 1 1 .836.15l-1.2 6.722a.426.426 0 0 1 -.418.35z"></path><path d="m51.27 57.016a.426.426 0 0 1 -.418-.35l-1.552-8.666a.425.425 0 1 1 .836-.15l1.55 8.663a.425.425 0 0 1 -.343.493.388.388 0 0 1 -.073.01z"></path><path d="m56.676 55.863a.425.425 0 0 1 -.425-.425v-6.722a.425.425 0 0 1 .85 0v6.722a.425.425 0 0 1 -.425.425z"></path></g></g></svg> -->
-        <a class="navbar-brand" routerLink="home" style="color: black;font-size: 20px;font-weight: bold;"><img src="../../assets/Screenshot (364).svg" width="100px" height="40px" alt=""></a>
+        <a class="navbar-brand" id="logo" routerLink="home" style="color: black;font-size: 20px;font-weight: bold;"><img src="../../assets/Screenshot (364).svg" width="100px" height="40px" alt=""></a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"  >
           <span class="navbar-toggler-icon "></span>
@@ -13,11 +13,14 @@
           <ul class="navbar-nav ms-auto float-end ">
          
         <li class="nav-item">
-        <a class="nav-link" routerLink="home"  routerLinkActive="active"  style="color: black;font-size: 20px;font-weight: bold; font-family: 'Courgette', cursive;" >Home </a>
+        <a class="nav-link" routerLink="home" id="home"  *ngIf="!logStatus" routerLinkActive="active"  style="color: black;font-size: 20px;font-weight: bold; font-family: 'Courgette', cursive;" >Home </a>
+        <a class="nav-link" routerLink="home" id="home"  *ngIf="logStatus" routerLinkActive="active"  style="color: black;font-size: 20px;font-weight: bold; font-family: 'Courgette', cursive;" >Home </a>
         </li>
 
 
-
+        <li class="nav-item">
+          <a class="nav-link" routerLink="" id="logout" (click)="logoutuser()" id="logout"  *ngIf="logStatus"  style="color: black;font-size: 20px;font-weight: bold; font-family: 'Courgette', cursive;" >Logout </a>
+        </li>
 
 
 
@@ -27,19 +30,21 @@
   <!-----------------------------------------------------------------------LOGIN------------------------------------------------------->
            
     <li class="nav-item">
-     <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#staticBackdrop2" style="color: black;font-size: 20px;font-weight: bold; font-family: 'Courgette', cursive;color: black;" > Login</a>
+     <a class="nav-link"  *ngIf="!logStatus"  id="login" href="#" data-bs-toggle="modal" data-bs-target="#staticBackdrop2" style="color: black;font-size: 20px;font-weight: bold; font-family: 'Courgette', cursive;color: black;" > Login</a>
 
     <!-- modal -->
+  
+
        <div class="modal fade"  id="staticBackdrop2" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
          <div class="modal-dialog">
        <div class="modal-content" style="background: linear-gradient(to bottom,#ff3399 0%, #ffffcc 100%)">
           <div class="modal-header" >     
         <h1 class="text" style="margin-left: 180px; color: black; font-family: 'Courgette', cursive;">Login</h1>
        <!-- <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5> -->
-      <button type="button" class="btn " style="float: right; margin-right: 10px; margin-bottom: 10px; margin-top: 10px; font-size: 25px;" data-bs-dismiss="modal" >X</button>
+      <button type="button" id="closebutton" class="btn " style="float: right; margin-right: 10px; margin-bottom: 10px; margin-top: 10px; font-size: 25px;" data-bs-dismiss="modal" >X</button>
         </div> 
                      
-      <div class="modal-body">
+      <div class="modal-body" >
         <div class="row">
       <div class="col-sm-5">
          <img src="../../assets/login - latest1.jpeg" style="width: 200px; height: 500px;" alt="">
@@ -78,7 +83,7 @@
            
 
   <!--------------------- submit button --------------------------->
-      <button type="submit" class="btn btn-primary d-block mx-auto mt-5">Login</button>
+      <button type="submit"    class="btn btn-primary d-block mx-auto mt-5" (ngSubmit)="ref.form.valid && onSelect(ref)" data-dismiss="modal fade">Login</button>
   </form>
 
      </div>
@@ -93,6 +98,8 @@
        </div>
      </div>
   </div>
+
+
 </li>
 
 
@@ -124,7 +131,8 @@
 <!-- -----------------------------------------------------------------REGISTER---------------------------------------------------------- -->
 
      <li class="nav-item">
-   <a class="nav-link" href="#"  data-bs-toggle="modal" data-bs-target="#myModal" style="color: black;font-size: 20px;font-weight: bold; font-family: 'Courgette', cursive;color: black;">Register</a>  
+   <a class="nav-link" href="#"  *ngIf="!logStatus" id="register" data-bs-toggle="modal" data-bs-target="#myModal" style="color: black;font-size: 20px;font-weight: bold; font-family: 'Courgette', cursive;color: black;">Register</a> 
+   <!-- <a class="nav-link" href="#"   *ngIf="logStatus" id="register" data-bs-toggle="modal" data-bs-target="#myModal" style="color: black;font-size: 20px;font-weight: bold; font-family: 'Courgette', cursive;color: black;">Register</a>    -->
       <!-------------------- modal ------------------>
       
     <div class="modal fade"  id="myModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
@@ -250,7 +258,7 @@
              </div>
 
              <li class="nav-item">
-              <a class="nav-link" routerLink="cart" routerLinkActive="active" style="color: black;font-size: 20px;font-weight: bold;font-family: 'Courgette', cursive;color: black;"><i class="fas fa-shopping-cart" style="font-size: x-large;"></i></a>
+              <a class="nav-link" id="cart" routerLink="cart" routerLinkActive="active" style="color: black;font-size: 20px;font-weight: bold;font-family: 'Courgette', cursive;color: black;"><i class="fas fa-shopping-cart" style="font-size: x-large;"></i></a>
             </li>
  
            
@@ -261,7 +269,7 @@
       </div>
     </nav>
   
-</div>
+<!-- </div> -->
 
 
 
