--- a/src/app/myprofile/myprofile.component.html
+++ b/src/app/myprofile/myprofile.component.html
@@ -1,1 +1,40 @@
-<p>myprofile works!</p>
+
+<div class="container">
+    <h1 style="font-family:Amita', cursive ; " class="welcome text-center">Welcome {{userfromBackend?.username}}</h1>
+    <div class="row ">
+        <div class="col-sm-2"></div>
+        <div class="col-sm-10">
+
+        <div class="card w-100 mt-5" style="width: 18rem;">
+          
+            <div class="card-body">
+                <div class="row">
+                <div class="col-sm-6 text-center">
+                    <h5 class="username" style="font-weight: bold; font-size: 30px; font-family: 'cursive', Amita ;">Username</h5>
+                    <h5 class="username" style="font-weight: bold; font-size: 30px; font-family: 'cursive', Amita ;">Email</h5>
+                    <h5 class="username" style="font-weight: bold; font-size: 30px; font-family: 'cursive', Amita ;">Number</h5>
+                    <h5 class="username" style="font-weight: bold; font-size: 30px; font-family: 'cursive', Amita ;">Address</h5>
+                </div>
+                <div class="col-sm-6 text-center">
+                    <h5 class="username" style="font-weight: bold; font-size: 30px; font-family:'Amita', cursive ;"> <i>{{userfromBackend?.username}}</i>  </h5> 
+                    <h5 class="username" style="font-weight: bold; font-size: 30px; font-family:'Amita', cursive ;"> <i> {{userfromBackend?.email}}</i> </h5> 
+                    <h5 class="username" style="font-weight: bold; font-size: 30px; font-family:'Amita', cursive ;"> <i>{{userfromBackend?.number}}</i> </h5> 
+                    <h5 class="username" style="font-weight: bold; font-size: 30px; font-family:'Amita', cursive ;" ><i> {{userfromBackend?.address}}</i></h5> 
+                </div>
+            </div>
+              <!-- <h5 class="card-title">Username : {{userfromBackend?.username}}</h5>
+              <h5 class="card-title">Email : {{userfromBackend?.email}}</h5>
+              <h5 class="card-title">Number : {{userfromBackend?.number}}</h5>
+              <h5 class="card-title">Address : {{userfromBackend?.address}}</h5> -->
+             
+              
+            </div>
+          </div>
+
+
+
+        <!-- <div class="col-sm-2"></div> -->
+    </div>
+
+
+</div>
