--- a/src/app/navbar1/navbar1.component.css
+++ b/src/app/navbar1/navbar1.component.css
@@ -1,3 +1,7 @@
+
+
+ @keyframes scale-up-center{0%{transform:scale(.5)}100%{transform:scale(1)}}
+
 /* .ng-touched.ng-invalid{
     border: 1px solid red;
 }
@@ -12,6 +16,25 @@
 	        animation: kenburns-top 5s ease-in infinite both;
 } */
 
-a:hover{
-    background-color:crimson;
+#logo{
+    animation:scale-up-center 4s cubic-bezier(.39,.575,.565,1.000) both
+}
+
+#home
+{
+    animation:scale-up-center 4s cubic-bezier(.39,.575,.565,1.000) both
+}
+#login{
+    animation:scale-up-center 4s cubic-bezier(.39,.575,.565,1.000) both
+}
+#register{
+    animation:scale-up-center 4s cubic-bezier(.39,.575,.565,1.000) both
+}
+
+#logout{
+    animation:scale-up-center 4s cubic-bezier(.39,.575,.565,1.000) both
+}
+
+#cart{
+    animation:scale-up-center 4s cubic-bezier(.39,.575,.565,1.000) both
 }
