--- a/src/app/userdashboard/userdashboard.component.html
+++ b/src/app/userdashboard/userdashboard.component.html
@@ -1,63 +1,26 @@
-<!-- <div class="container-fluid" style="background-image: url(../../assets/grocery1.jpeg); height: 100%;" > -->
-  
-
-
-
-
 
 <div class="body">
     
- <div class="container-fluid" > 
     
-    
-   
-    <h6 class="text-center text-dark">Welcome,{{username}}</h6>  
-    <h6 class="text-center text-dark">Welcome,{{username}}</h6>  
-    <h6 class="text-center text-dark">Welcome,{{username}}</h6>  
-    <h6 class="text-center text-dark">Welcome,{{username}}</h6>  
-    <h6 class="text-center text-dark">Welcome,{{username}}</h6>  
-    <h6 class="text-center text-dark">Welcome,{{username}}</h6>  
-    <h6 class="text-center text-dark">Welcome,{{username}}</h6>  
-    <h6 class="text-center text-dark">Welcome,{{username}}</h6>  
-    <h6 class="text-center text-dark">Welcome,{{username}}</h6>  
-    <h6 class="text-center text-dark">Welcome,{{username}}</h6>  
-    <h6 class="text-center text-dark">Welcome,{{username}}</h6>  
-    <h6 class="text-center text-dark">Welcome,{{username}}</h6>  
-    <h6 class="text-center text-dark">Welcome,{{username}}</h6>  
-
-     <h6 class="text-center text-dark">Welcome,{{username}}</h6>  
-     <h6 class="text-center text-dark">Welcome,{{username}}</h6>  
-    
-    
-    
-
-   
-    
-    
-
-
-    <div class="row">
-        <div class="col-sm-1">
+        <div class="col-md-1">
             <div id="mySidenav" class="vertical-menu">
                 <a routerLink="myprofile" id="myprofile">My Profile</a>
                 <a routerLink="myaddress" id="myaddress">My Address</a>
                 <a routerLink="wishlist" id="readylist">Wish List</a>
                 <a routerLink="myorders" id="orders">My Orders</a>
               </div>
-    </div>
-    <div class="col-sm-11">
-        <router-outlet></router-outlet>
-    </div>
-    </div> 
+        </div>
+            <div class="col-md-11">
+                <router-outlet></router-outlet>
+            </div>
+
+  
+
 
 </div>
-</div>
 
 
- 
-
-<!-- </div> -->
-<!-- <h1 class="text-center text-primary">Welcome {{username}} </h1> -->
+ <app-footer></app-footer>
 
 
-<!-- <app-footer></app-footer> -->
+ <!--  <a routerLink="" style="float: right;" (click)="userLogout()">Signout</a> -->
