--- a/src/app/admin/productlist/productlist.component.html
+++ b/src/app/admin/productlist/productlist.component.html
@@ -1,4 +1,4 @@
-<h3 *ngIf="productsStatus" class="text-center text-secondary mt-5">No products in the list</h3>
+<!-- <h3 *ngIf="productsStatus" class="text-center text-secondary mt-5">No products in the list</h3>
 
 <div *ngIf="!productsStatus" class="table-responsive">
     <table class="table text-center">
@@ -23,10 +23,136 @@
                     <img src={{product.productimage}} width="150px" height="200px" alt="" class="d-block mx-auto image">
                 </td>
 
-                <td><button type="submit" class="btn btn-primary" (click)="updatemethod()">Edit</button></td>
+                <td>
+                    <div *ngIf="!product.isEdit">
+                    <button  (click)="edit(product)" class="btn btn-primary" >Edit</button>
+                     </div>
+
+                     <div *ngIf="product.isEdit">
+                        <button  (click)="save(product)" class="btn btn-primary" >Save</button>
+                     </div>
+
+                </td>
                 <td><button type="submit" class="btn btn-danger">Remove</button></td>
             </tr>
 
         </tbody>
     </table>
+</div> -->
+
+
+
+
+<div class="container-fluid " style="margin-top:5%;">
+    <h1 class="text-center text-primary ">Product details</h1>
+    
+<table class="table table-bordered text-center table-hover table-striped">
+    <thead>
+        <tr class="m-auto">
+            <!-- <th>Sl.no</th> -->
+            <!-- <th>Category</th> -->
+            <th>Product Id</th>
+            <th>Product Name</th>
+            <th>Product Price</th>
+            <!-- <th>Description</th>            -->
+          
+            <th>Description</th>
+            <th>Image</th>
+            <th  class="text-center m-auto" colspan="2">Action</th>
+            
+        </tr>
+    </thead>
+  <tbody *ngFor="let product of products; let i=index">
+        <tr>
+            <!-- <td>{{i+1}}</td> -->
+<!-- 
+            <td>
+                <div *ngIf="!product.isEdit">{{product.category}}</div>
+                <div *ngIf="product.isEdit"><input type="text" class="form-control" name="category" [(ngModel)]="product.category"></div>
+            </td>  -->
+
+
+
+
+            <td>
+                <div *ngIf="!product.isEdit">{{product.productid}}</div>
+                <div *ngIf="product.isEdit"><input type="number" class="form-control" name="productid"  [(ngModel)]="product.productid"></div>
+            </td> 
+
+
+
+
+
+             <td>
+                <div *ngIf="!product.isEdit">{{product.productname}}</div>
+                <div *ngIf="product.isEdit"><input type="text" class="form-control" name="productname" [(ngModel)]="product.productname"></div>
+            </td> 
+            <!-- <td>
+                <div *ngIf="!product.isEdit">{{product.productname}}</div>
+                <div *ngIf="product.isEdit"><input type="text" class="form-control" name="brand" [(ngModel)]="product.brand"></div>
+            </td> -->
+            <!-- <td>
+                <div *ngIf="!product.isEdit">{{product.productprice}}</div>
+                <div *ngIf="product.isEdit"><input type="text" class="form-control" name="category" [(ngModel)]="product.category"></div>
+            </td> -->
+            <td>
+                <div *ngIf="!product.isEdit">{{product.productprice}}</div>
+                <div *ngIf="product.isEdit"><input type="text" class="form-control" name="productprice" [(ngModel)]="product.productprice"></div>
+            </td>
+            <!-- <td>
+                <div *ngIf="!product.isEdit">{{product.productdescription}}</div>
+                <div *ngIf="product.isEdit"><input type="text" class="form-control" name="productdescription" [(ngModel)]="product.productdescription"></div>
+            </td> -->
+            <td>
+                <div *ngIf="!product.isEdit">{{product.productdescription}}</div>
+                <div *ngIf="product.isEdit"><input type="text" class="form-control" name="productdescription" [(ngModel)]="product.productdescription"></div>
+            </td>
+
+
+            <td>
+                <div *ngIf="!product.isEdit"> <img src={{product.productimage}} width="150px" height="200px" class="d-block mx-auto image" alt="">   </div>
+                <div *ngIf="product.isEdit"><input class="form-control" name="productimage" [(ngModel)]="product.productimage"></div>
+            </td>
+           <!--<td>
+                <div *ngIf="!obj.isEdit">{{obj.productdetails}}</div>
+                <div *ngIf="obj.isEdit"><input type="text" class="form-control" name="productdetails" [(ngModel)]="obj.productdetails"></div>
+            </td>-->
+         
+
+
+
+            <!-- ------------------------------------EDIT------AND---------------------SAVE--------------->
+             <td>
+                   <div  *ngIf="!product.isEdit">
+                    <button class="btn btn-info " (click)="edit(product)">Edit</button>
+                    </div>
+                    <div *ngIf="product.isEdit">
+                        <button class="btn btn-info" (click)="save(product)">Save</button>
+                    </div>
+             </td>
+
+
+             <!-- ----------------------------------------DELETE------------------------------------------>
+             <td>
+
+                <div  *ngIf="!product.isEdit">
+                    <button class="btn btn-danger " (click)="delete(product)">Delete</button>
+                      </div>
+                    <div *ngIf="product.isEdit">
+                        <button class="btn btn-danger" (click)="cancel(product)">Cancel</button>
+                    </div>
+
+             </td>
+
+        </tr>
+    </tbody>
+</table>
 </div>
+
+
+
+
+
+
+
+
