--- a/src/app/navbar2/navbar2.component.html
+++ b/src/app/navbar2/navbar2.component.html
@@ -10,7 +10,7 @@
          
         
           <li class="nav-item" style="margin-left: 35px;" >
-            <a class="nav-link" href="#" routerLinkActive="active" style=" font-family: 'Courgette', cursive;color: black;font-size: 16px; font-weight: bold;" >Dals & Pulses </a>
+            <a class="nav-link" routerLink="dals-pulses"  routerLinkActive="active" style=" font-family: 'Courgette', cursive;color: black;font-size: 16px; font-weight: bold;" >Dals & Pulses </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#"  routerLinkActive="active" style=" font-family: 'Courgette', cursive;color: black;font-size: 16px; font-weight: bold;"> Flours & Grains </a>
