--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,1 +1,213 @@
 
+   
+    <!-- <div class="modal fade"  id="myModal"  data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true"> -->
+        <!-- <div class="modal-dialog" > -->
+        <!-- <div class="modal-content" style="  background: linear-gradient(to bottom, #9966ff 0%, #ff0066 100%)"> -->
+         <!-- <div class="modal-header" > 
+                    
+         <h1 class="text-center" style="margin-left: 70px; color: black; font-family: 'Courgette', cursive;">Register Here</h1>
+      
+      <button type="button" class="btn" style="float: right; margin-right: 10px; margin-bottom: 10px; margin-top: 10px; font-size: 25px;" data-bs-dismiss="modal" >X</button>
+     </div>  -->
+  
+       <!-- <div class="modal-body"> -->
+
+
+
+
+
+
+
+
+
+
+
+<!-- 
+
+        <div class="row">
+
+
+      <div class="col-sm-5">
+        <img src="../assets/register.jpeg" style="width: 200px; height: 500px;" alt="">
+      </div>
+     <div class="col-sm-7">
+     
+    <form  #formRef="ngForm" class="form" (ngSubmit)="formRef.form.valid&&onSubmit(formRef)">
+  
+       
+     <input type="text" id="n" class="form-control mb-2"  name="username"  required #ref1="ngModel" placeholder="Username" ngModel autocomplete="off">
+                            
+                                <div class="text" style="color: yellow;" *ngIf="(ref1.touched || formRef.submitted) && (ref1.errors?.required)">
+                                 *Username is required </div>
+  
+  
+                                 
+                                  <div class="form-group">
+                                    
+                                    <input type="password" placeholder="Password" id="pw" value="password" class="form-control mb-2" 
+                                    name="password" required minlength="6" pattern="(^(?=.*[A-Z])(?=.*[0-9])[a-zA-Z0-9]+$)" #ref2="ngModel" ngModel>
+                                </div>
+                  
+                    <div class="text" style="color: yellow;" *ngIf="(ref2.touched || formRef.submitted) ">
+                          <div *ngIf="ref2.errors?.required">
+                                    *Please enter  password
+                                </div>
+                                    <div *ngIf="ref2.errors?.minlength">
+                                          *Minimum length should be 6
+                                        </div>
+                                           <div *ngIf="ref2.errors?.pattern">
+                                              *Password should contain one digit and one capital letter
+                          </div>
+                    
+                    </div>
+  
+  
+                                                 
+                          <input type="email" class="form-control mb-2" id="email" placeholder="Email" value="email" name="email" #email="ngModel"  autocomplete="off" ngModel required>
+                          <div id="email" class="form-text" style="color: black;">We'll never share your email with anyone else.</div>
+                          
+                           <p *ngIf="(email.touched || formRef.submitted)&&email.errors?.required" class="text" style="color: yellow;">*Email required</p>
+  
+  
+                           
+                           
+                             <input type="number" class="form-control mb-2" id="number" value="number" placeholder="Enter your mobile number"  autocomplete="off" name="number" #number="ngModel" ngModel required>
+                                                      
+                           
+                             <p *ngIf="(number.touched || formRef.submitted)&&number.errors?.required" class="text" style="color: yellow;">*Mobile number is Required</p>
+  
+  
+  
+                         
+                            <textarea class="form-control mb-2" id="exampleFormControlTextarea1" rows="3"  autocomplete="off" placeholder="Enter Your Address" ngModel name="address" value="address" #address="ngModel" required></textarea>
+                          
+                            <p *ngIf="(address.touched || formRef.submitted)&&address.errors?.required" class="text" style="color: yellow;">*Address is required</p>
+                           
+   
+                               
+                                <input class="form-check-input" type="checkbox" value="" id="invalidCheck" name="checkbox" value="checkbox" #checkbox="ngModel" required ngModel>
+                                <label class="form-check-label" for="invalidCheck" style="color: black;">I  Agree to terms and conditions </label>
+  
+                                <p *ngIf="(checkbox.touched || formRef.submitted)&&checkbox.errors?.required" class="text" style="font-size: 11px; color: yellow;">*Please check the box to register</p>
+  
+                          
+                           <button type="submit" class="btn btn-primary d-block mx-auto mt-4 "  >Register</button> 
+                            
+  
+                          </form>
+  
+  
+                            </div>
+                          </div> -->
+
+                        <!-- </div>  -->
+  
+  
+                    <!-- </div> -->
+                  <!-- </div> -->
+                <!-- </div> -->
+
+
+
+
+<!-- -----------------------------------------------------------------------Srinidhis--------------------- -->
+
+
+                   
+
+ 
+                   <!-- <router-outlet></router-outlet> -->
+
+                <!-- -------------------------------------------------------------prashanths -->
+                <div class="container-fluid">
+                 
+                  <div class="row" >
+                    <!-- style="background-color:skyblue;height:100vh;" -->
+                      <div class="col-sm-7  example1 mt-5">
+                          <img src="../../assets/Sriregister.png" alt="Registeration Image"  style="border-radius: 20px; width: 500px ; height: 600px;">
+                      </div>
+                       <div class="col-sm-5 example2 mt-5">
+                          <!-- Register Form -->
+                                   <form  #formRef="ngForm" class="form" (ngSubmit)="formRef.form.valid&&onSubmit(formRef)" >
+                                          <!-- Username -->
+                                      <input type="text" style="width: 75%;"id="n" class="form-control mb-3"  name="username"  required #ref1="ngModel" placeholder="Username" ngModel autocomplete="off">  
+                                      <!-- username validation -->
+                                      <div class="text" style="color: red;" *ngIf="(ref1.touched || formRef.submitted) && (ref1.errors?.required)">
+                                       *Username is required </div>
+              
+              
+                                        <!-- password -->
+                                        <div class="form-group">
+                                          
+                                          <input type="password" style="width: 75%;" placeholder="Password" id="pw" value="password" class="form-control mb-3" 
+                                          name="password" required minlength="6" pattern="(^(?=.*[A-Z])(?=.*[0-9])[a-zA-Z0-9]+$)" #ref2="ngModel" ngModel>
+                                      </div>
+                                       <!-- Password validation -->
+                                       <div class="text" style="color: red;" *ngIf="(ref2.touched || formRef.submitted) ">
+                                              <div *ngIf="ref2.errors?.required">
+                                                           *Please enter  password
+                                                   </div>
+                                                       <div *ngIf="ref2.errors?.minlength">
+                                                                *Minimum length should be 6
+                                                           </div>
+                                                       <div *ngIf="ref2.errors?.pattern">
+                                                          *Password should contain one digit and one capital letter
+                                               </div>
+                                
+                                       </div>
+              
+                                        <!-- email -->                
+                                        <input type="email" style="width: 75%;" class="form-control mb-3" id="email"  placeholder="Email" value="email" name="email" #email="ngModel"  autocomplete="off" ngModel required>  
+                                      <!-- <div id="email" class="form-text" style="color: darkviolet;">We'll never share your email with anyone else.</div>   -->
+                                      <!-- validation for email -->
+                                       <p *ngIf="(email.touched || formRef.submitted)&&email.errors?.required" class="text" style="color: red;">*Email required</p>
+                                        <!-- Mobile number -->
+                                         <input type="number" style="width: 75%;" class="form-control mb-3" id="number" value="number" placeholder="Enter your mobile number"  autocomplete="off" name="number" #number="ngModel" ngModel required>
+                                                                  
+                                         <!-- validation for Number-->
+                                         <p *ngIf="(number.touched || formRef.submitted)&&number.errors?.required" class="text" style="color: red;">*Mobile number is Required</p>
+              
+              
+              
+                                         
+                                        <!-- Address -->
+                                        <textarea class="form-control mb-3" id="exampleFormControlTextarea1" rows="3" style="width: 75%;"  autocomplete="off" placeholder="Enter Your Address" ngModel name="address" value="address" #address="ngModel" required></textarea>
+                                        <!-- validation for address -->
+                                        <p *ngIf="(address.touched || formRef.submitted)&&address.errors?.required" class="text" style="color: red;">*Address is required</p>
+                                        <!-- --------------------------------------------------------------------- -->
+                                            <!-- terms and conditions -->
+                                            <input class="form-check-input" width="75%" type="checkbox" value="" id="invalidCheckbox1" name="checkbox" value="checkbox" #checkbox="ngModel" required ngModel>
+                                            <label class="form-check-label" for="invalidCheck" style="color: sandybrown;"> I Agree to terms & Conditions </label>
+              
+                                            <p *ngIf="(checkbox.touched || formRef.submitted)&&checkbox.errors?.required" class="text" style="font-size: 11px; color: red;">*Please check the box to register</p>
+              
+                                        <!-- submit button -->
+                                        <button type="submit" style=" background-color: aqua; color: black; font-family: 'Courgette',cursive;" class="btn  d-block mx-auto mt-2 mb-2" >Register</button>  
+                                        
+               
+                                   </form>
+                         
+              
+                      </div>
+              
+                  </div>
+                     
+              </div>
+              
+             
+
+              <router-outlet></router-outlet>
+  <app-footer></app-footer>  
+
+
+
+
+
+
+
+
+
+
+
+
+
