--- a/src/app/myprofile/myprofile.component.html
+++ b/src/app/myprofile/myprofile.component.html
@@ -5,7 +5,7 @@
         <div class="col-sm-2"></div>
         <div class="col-sm-10">
 
-        <div class="card w-100 mt-5" style="width: 18rem;">
+        <div class="card w-100 mt-5" style = " width: 18rem">
           
             <div class="card-body">
                 <div class="row">
