--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -2,7 +2,7 @@
 <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="2000">
-        <img src="../assets/grocery1.jpeg" class="d-block w-100" alt="..."  style="width: 930px;height:500px;">
+        <img src="https://www.bigbasket.com/media/uploads/banner_images/2104132_ice-creams_400.jpg" class="d-block w-100" alt="..."  style="width: 930px;height:500px;">
       </div>
       <div class="carousel-item" data-bs-interval="2000">
         <img src="../assets/grocery5.jpeg" class="d-block w-100" alt="..." style="width: 930px;height:500px;">
