--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="footer-div5 footer-expand-sm mt-3" style="background-image:url('https://png.pngtree.com/thumb_back/fh260/background/20190221/ourmid/pngtree-texture-geometric-black-metal-gradient-image_17809.jpg')">
+<div class="footer-div5 footer-expand-sm" style="background-image:url('https://png.pngtree.com/thumb_back/fh260/background/20190221/ourmid/pngtree-texture-geometric-black-metal-gradient-image_17809.jpg')">
     <!-- ../../assets/Footer-background.jpg -->
     <div class="div-col-1">
         <section>
