--- a/src/app/myprofile/myprofile.component.css
+++ b/src/app/myprofile/myprofile.component.css
@@ -1,3 +1,24 @@
 .card-body{
     border: 10px solid midnightblue;
 }
+
+
+/* .card-body{
+    border: 10px solid midnightblue;
+     
+} */
+.example1{
+    background-color: lightskyblue;
+    color: white;
+}
+.example2{
+    background-color: lightyellow;
+    color:black;
+}
+#card{
+     
+    animation:rotate-scale-up .65s linear both
+     
+}
+ 
+@keyframes rotate-scale-up{0%{transform:scale(1) rotateZ(0)}50%{transform:scale(2) rotateZ(180deg)}100%{transform:scale(1) rotateZ(360deg)}}
