--- a/src/app/navbar2/navbar2.component.html
+++ b/src/app/navbar2/navbar2.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar  navbar-expand-lg  navbar-inverse navbar-light"  style="background-color: yellow;font-family: 'Amita', cursive;">
+<nav class="navbar  navbar-expand-lg  navbar-inverse navbar-light"  style="background: #222831 ;font-family: 'Amita', cursive;">
     <div class="container-fluid" >
       <!-- <a class="navbar-brand" routerLink="pre"> <i>   </i></a> -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,40 +10,40 @@
          
         
           <li class="nav-item" style="margin-left: 35px;" >
-            <a class="nav-link" routerLink="dals-pulses"  routerLinkActive="active" style=" font-family: 'Courgette', cursive;color: black;font-size: 16px; font-weight: bold;" >Dals & Pulses </a>
+            <a class="nav-link" routerLink="dals-pulses" routerLinkActive="active" style=" font-family: 'Courgette', cursive;color: white;font-size: 16px; font-weight: bold;" >Dals & Pulses </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"  routerLinkActive="active" style=" font-family: 'Courgette', cursive;color: black;font-size: 16px; font-weight: bold;"> Flours & Grains </a>
+            <a class="nav-link" routerLink="flours-grains"  routerLinkActive="active" style=" font-family: 'Courgette', cursive;color: white;font-size: 16px; font-weight: bold;"> Flours & Grains </a>
           </li>
           <li class="nav-item" >
-            <a class="nav-link" href="#" routerLinkActive="active" style=" font-family: 'Courgette', cursive;color: black;font-size: 16px; font-weight: bold;">Rice Products</a>
+            <a class="nav-link" routerLink="riceproducts"  routerLinkActive="active" style=" font-family: 'Courgette', cursive;color: white;font-size: 16px; font-weight: bold;">Rice Products</a>
           </li>
           <li class="nav-item" >
-           <a class="nav-link" href="#"  routerLinkActive="active" style=" font-family: 'Courgette', cursive;color: black;font-size: 16px; font-weight: bold;">Dry Fruits</a>
+           <a class="nav-link" routerLink="dryfruits"  routerLinkActive="active" style=" font-family: 'Courgette', cursive;color: white;font-size: 16px; font-weight: bold;">Dry Fruits</a>
           </li>
           <li class="nav-item">
-           <a class="nav-link" href="#" routerLinkActive="active" style=" font-family: 'Courgette', cursive;color: black;font-size: 16px; font-weight: bold;">Spices & Masalas </a>
+           <a class="nav-link" routerLink="spices-masalas" routerLinkActive="active" style=" font-family: 'Courgette', cursive;color: white;font-size: 16px; font-weight: bold;">Spices & Masalas </a>
          </li>
   
          <li class="nav-item" >
-          <a class="nav-link" href="#" routerLinkActive="active" style=" font-family: 'Courgette', cursive;color: black;font-size: 16px; font-weight: bold;">Cooking Oils </a>
+          <a class="nav-link" routerLink="cookingoils"  routerLinkActive="active" style=" font-family: 'Courgette', cursive;color: white;font-size: 16px; font-weight: bold;">Cooking Oils </a>
         </li>
   
         <li class="nav-item">
-          <a class="nav-link" href="#" routerLinkActive="active" style=" font-family: 'Courgette', cursive;color: black;font-size: 16px; font-weight: bold;">Dairy Products </a>
+          <a class="nav-link" routerLink="dairyproducts"  routerLinkActive="active" style=" font-family: 'Courgette', cursive;color: white;font-size: 16px; font-weight: bold;">Dairy Products </a>
         </li>
   
         <li class="nav-item">
-          <a class="nav-link" href="#" routerLinkActive="active" style=" font-family: 'Courgette', cursive;color: black;font-size: 16px; font-weight: bold;">Salt,Sugar & Jaggery </a>
+          <a class="nav-link" routerLink="salt" routerLinkActive="active" style=" font-family: 'Courgette', cursive;color: white;font-size: 16px; font-weight: bold;">Salt,Sugar & Jaggery </a>
         </li>
   
         <li class="nav-item">
-          <a class="nav-link" href="#" routerLinkActive="active" style=" font-family: 'Courgette', cursive;color: black;font-size: 16px; font-weight: bold;">Breakfast Cereals </a>
+          <a class="nav-link" routerLink="breakfast"  routerLinkActive="active" style=" font-family: 'Courgette', cursive;color: white;font-size: 16px; font-weight: bold;">Breakfast Cereals </a>
         </li>
   
   
         <li class="nav-item">
-          <a class="nav-link" href="#" routerLinkActive="active"style=" font-family: 'Courgette', cursive;color: black;font-size: 16px; font-weight: bold;">Other Grocery</a>
+          <a class="nav-link" routerLink="othergrocery" routerLinkActive="active"style=" font-family: 'Courgette', cursive;color: white;font-size: 16px; font-weight: bold;">Other Grocery</a>
         </li>
          
           
