--- a/src/app/myprofile/myprofile.component.html
+++ b/src/app/myprofile/myprofile.component.html
@@ -1,11 +1,14 @@
 
-<div class="container">
-    <h1 style="font-family:Amita', cursive ; " class="welcome text-center">Welcome {{userfromBackend?.username}}</h1>
-    <div class="row ">
+<!-- <div class="container"> -->
+
+
+
+    <!-- <h1 style="font-family:Amita', cursive ; " class="welcome text-center">Welcome {{userfromBackend?.username}}</h1> -->
+    <!-- <div class="row ">
         <div class="col-sm-2"></div>
         <div class="col-sm-10">
 
-        <div class="card w-100 mt-5" style = " width: 18rem">
+        <div class="card w-100 mt-5" style = "width: 18rem">
           
             <div class="card-body">
                 <div class="row">
@@ -22,19 +25,39 @@
                     <h5 class="username" style="font-weight: bold; font-size: 30px; font-family:'Amita', cursive ;" ><i> {{userfromBackend?.address}}</i></h5> 
                 </div>
             </div>
-              <!-- <h5 class="card-title">Username : {{userfromBackend?.username}}</h5>
-              <h5 class="card-title">Email : {{userfromBackend?.email}}</h5>
-              <h5 class="card-title">Number : {{userfromBackend?.number}}</h5>
-              <h5 class="card-title">Address : {{userfromBackend?.address}}</h5> -->
-             
-              
+        
             </div>
           </div>
 
 
 
-        <!-- <div class="col-sm-2"></div> -->
+        
     </div>
 
 
+    </div> -->
+
+
+    
+<!-- </div> -->
+
+
+
+<div class="container">
+    <div class="row "  >
+        <div class="col-sm-2"></div>
+        <div class="col-sm-10">
+                <div class="card w-100 h-100" id="card" style="background-color:lightyellow;">
+                            <img src="https://gracecourtschools.org/static/img/avatar.png" class=" d-block mx-auto"alt=""  style="width: 50%;height:50%;padding:20px;">
+                        <div class="card-body text-center">
+                            <h5 class="username" style="font-weight: bold;   font-family: 'cursive', Amita ;"><i class="fa fa-user" aria-hidden="true" style="margin-right: 10px;color: gray;"></i> {{userfromBackend?.username}}</h5>
+                            <h5 class="username" style="font-weight: bold;  font-family: 'cursive', Amita ;"><i class="fa fa-envelope" aria-hidden="true" style="margin-right: 10px;color:#4285F4;"></i> {{userfromBackend?.email}}</h5>
+                            <h5 class="username" style="font-weight: bold;   font-family: 'cursive', Amita ;"><i class="fa fa-mobile" aria-hidden="true" style="margin-right: 10px;color:lightpink;"></i>{{userfromBackend?.number}}</h5>
+                            <h5 class="username" style="font-weight: bold;   font-family: 'cursive', Amita ;"><i class="fa fa-map-marker" aria-hidden="true" style="margin-right: 10px;color:yellow"></i>{{userfromBackend?.address}}</h5>
+                        </div>
+                </div>
+        </div>
+        <!-- <div class="col-sm-4"></div> -->
+    </div>
 </div>
+
