--- a/src/app/viewproduct/viewproduct.component.html
+++ b/src/app/viewproduct/viewproduct.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-6">
-            <img src={{product.productimage}} alt="" width="100%">
+            <img src={{product.productimage}} alt="" width="100%" class="img h-75 mt-5">
         </div>
         <div class=" col-sm-6 d-flex ">
             <div class="align-self-center">
@@ -9,9 +9,12 @@
             <h2>{{product.productname }} </h2>
                 <h3><i class="fas fa-rupee-sign"></i>{{product.productprice  }}</h3>
             <p class="lead">{{product.productdescription | titlecase}}</p>
+            <button class="btn-info float-center" (click)="addProductToCart(product)">Add to cart</button> 
         
         </div>
         </div>
-        <!-- <button class="btn-info float-end" (click)="addProductToCart(product)">Add to cart</button> -->
+        
     </div>
 </div>
+
+<app-footer></app-footer>
